See changelog 2023-12-10
