# app/internal/modules/catalog/entity/admin-api/category.go
@@ -8,18 +8,18 @@ import (
 )
 
 const (
-	ModelNameCatalogCategory = "admin-api.CatalogCategory"
+	ModelNameCategory = "admin-api.CatalogCategory"
 )
 
 type (
-	Category struct { // DB: catalog_categories
-		ID         mrtype.KeyInt32 `json:"id" sort:"category_id"`
-		TagVersion int32           `json:"version"` // tag_version
-		CreatedAt  time.Time       `json:"createdAt" sort:"datetime_created"`
-		UpdateAt   time.Time       `json:"updateAt"` // datetime_updated
+	Category struct { // DB: ps_catalog.categories
+		ID         mrtype.KeyInt32 `json:"id"`                                   // category_id
+		TagVersion int32           `json:"version"`                              // tag_version
+		CreatedAt  time.Time       `json:"createdAt" sort:"createdAt"`           // datetime_created
+		UpdatedAt  *time.Time      `json:"updatedAt,omitempty" sort:"updatedAt"` // datetime_updated
 
-		Caption   string           `json:"caption" sort:"category_caption,default"`
-		ImagePath string           `json:"-"` // image_path
+		Caption   string           `json:"caption" sort:"caption,default"` // category_caption
+		ImagePath string           `json:"-"`                              // image_path
 		ImageInfo *mrtype.FileInfo `json:"imageInfo,omitempty"`
 
 		Status mrenum.ItemStatus `json:"status"` // category_status
