# docs/api/public-api/openapi-full.yaml
@@ -3,12 +3,31 @@ openapi: 3.0.3
 info:
   version: 0.3.0
   title: Public API go-sample
-  description: Public REST API проекта go-sample
   license:
     name: Apache-2.0
     url: https://www.apache.org/licenses/LICENSE-2.0
   contact:
     name: Andrey Nazarov
+  description: |-
+    Public REST API проекта go-sample
+
+    ### Пользовательские ограничения полей и ошибки
+
+    #### Ограничения полей
+    - required - поле обязательно для заполнения;
+    - omitempty - поле может быть не указано (не будет использоваться методом, в который было передано);
+    - min=N - поле должно быть не менее N символов;
+    - max=N - поле должно быть не более N символов;
+    - gte=N - числовое поле должно быть равно или более N;
+    - lte=N - числовое поле должно быть равно или менее N;
+    - enum - поле должно содержать одно из ENUM значений;
+    - pattern=P - поле должно соответствовать регулярному выражению P;
+
+    #### Ошибки
+    - ErrVersionInvalid - если передаваемая версия объекта не совпала с текущей версией объекта.\
+      Как правило, это означает, что объект был ранее изменён другим процессом;
+    - ErrSwitchStatusRejected - перевод в указанный статус объекта отклонён.\
+      WorkFlow объекта запрещает переключение в указанный статус;
 servers:
   - url: http://localhost:8080/pub
     description: Local Host
@@ -72,7 +91,7 @@ paths:
         "500":
           $ref: "#/components/responses/App.ResponseJson.Error5XX"
 
-  /v1/images/{filePath}:
+  /images/{filePath}:
     get:
       summary: Метод получения указанного изображения
       description: Метод предназначен для получения указанного файла изображения из файлового хранилища
@@ -191,7 +210,7 @@ components:
       schema:
         type: integer
         minimum: 1
-      example: 21
+      example: 1000
 
     FileStation.PublicAPI.Request.Path.FilePath:
       description: Относительный путь к файлу
@@ -211,6 +230,19 @@ components:
       maxLength: 128
       example: "Название"
 
+    App.Field.Date.CreatedAt:
+      description: Дата и время создания записи (UTC)
+      type: string
+      format: date-time
+      example: "2023-01-01T12:00:00.000+02:00"
+
+    App.Field.Date.UpdatedAt:
+      description: Дата и время обновления записи (UTC)
+      type: string
+      format: date-time
+      nullable: true
+      example: "2023-01-01T12:00:00.000+02:00"
+
     App.Field.ImageURL:
       description: URL к изображению записи
       type: string
@@ -221,7 +253,7 @@ components:
       description: Идентификатор записи
       type: integer
       minimum: 1
-      example: 80402010
+      example: 1000
 
     App.Field.ListPager.Total:
       description: Количество записей в БД с учётом указанных в запросе фильтров
